@@ -93,10 +93,10 @@ typedef struct _WGX_MENU {
 /* wgx routines prototypes */
 BOOL WgxAddAccelerators(HINSTANCE hInstance,HWND hWindow,UINT AccelId);
 
-HMENU WgxBuildMenu(WGX_MENU *menu_table,HBITMAP toolbar_bmp);
-HMENU WgxBuildPopupMenu(WGX_MENU *menu_table,HBITMAP toolbar_bmp);
+HMENU WgxBuildMenu(WGX_MENU *menu_table,HBITMAP bitmap);
+HMENU WgxBuildPopupMenu(WGX_MENU *menu_table,HBITMAP bitmap);
 
-HBITMAP WgxCreateMenuBitmapMasked(HBITMAP hBMSrc, COLORREF crTransparent);
+HBITMAP WgxCreateMenuBitmapMasked(HBITMAP hSrc,COLORREF crTransparent);
 
 /* lines in language files are limited by 8191 characters, which is more than enough */
 BOOL WgxBuildResourceTable(PWGX_I18N_RESOURCE_ENTRY table,wchar_t *lng_file_path);
